--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 100vh; */
+    http://127.0.0.1:5500/    /* height: 100vh; */
     margin: 0;
 }
 
@@ -13,7 +11,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 700px;
+    width: 500px;
 }
 
 h1 {
@@ -27,8 +25,6 @@ ul {
 }
 
 li {
-    display: flex;
-    align-items: center;
     width:500px;
     /* justify-content: space-between; */
     padding: 10px;
